--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
          <a href="https://sushantsubedi-tech.github.io/Made-with-gsap/" target="_blank">https://sushantsubedi-tech.github.io/Made-with-gsap/</a>
         </div>
         <div id="card3" class="card">
-         <video src="/project sid.mp4" loop muted autoplay ></video>
+          <video autoplay loop>
+            <source src="/project sid.mp4" type="video/mp4">
+        </video>
          <h1>Projects Link</h1>
          <a href="https://sushantsubedi-tech.github.io/sid-ui-clone/" target="_blank">https://sushantsubedi-tech.github.io/sid-ui-clone/</a>
         </div>
         <div id="card4" class="card">
-         <video src="/project twogood.mp4" loop muted autoplay ></video>
+         <video src="/project twogood.mp4" loop muted autoplay  ></video>
          <h1>Projects Link</h1>
          <a href="https://sushantsubedi-tech.github.io/Two-Good-Co-ui/" target="_blank">https://sushantsubedi-tech.github.io/Two-Good-Co-ui/</a>
         </div>
