--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </div>
     <div id="fakenav"></div>
     <div id="page1">
-      <video src="/hero-cut-1.mp4" autoplay loop muted height="100vh" width="100vw"> </video>
+      <video autoplay loop muted height="100vh" width="100%">
+        <source src="/hero-cut-1.mp4" type="video/mp4">
+    </video>
       <div id="content-container">
         <h1>I'm a <span>WEB-DEVELOPER</span></h1>
         <p>🚀 Passionate Web Developer | 💻 Skilled in HTML, CSS, JavaScript & modern frameworks | 🎨 Crafting
@@ -49,13 +51,17 @@
       </button>
       <div id="content-wrapper">
         <div id="card1" class="card">
-         <video src="/project cy.mp4" loop muted autoplay ></video>
+          <video autoplay loop muted>
+            <source src="/project cy.mp4" type="video/mp4">
+        </video>
          <h1>Projects Link</h1>
          <a href="https://sushantsubedi-tech.github.io/Cynthia-Ugwu-ui-/" target="_blank">https://sushantsubedi-tech.github.io/Cynthia-Ugwu-ui-/</a>
          
         </div>
         <div id="card2" class="card">
-         <video src="/project made with gsap.mp4" loop muted autoplay ></video>
+          <video autoplay loop muted>
+            <source src="/project made with gsap.mp4" type="video/mp4">
+        </video>
          <h1>Projects Link</h1>
          <a href="https://sushantsubedi-tech.github.io/Made-with-gsap/" target="_blank">https://sushantsubedi-tech.github.io/Made-with-gsap/</a>
         </div>
@@ -67,12 +73,17 @@
          <a href="https://sushantsubedi-tech.github.io/sid-ui-clone/" target="_blank">https://sushantsubedi-tech.github.io/sid-ui-clone/</a>
         </div>
         <div id="card4" class="card">
-         <video src="/project twogood.mp4" loop muted autoplay  ></video>
+          <video autoplay loop muted>
+            <source src="/project twogood.mp4" type="video/mp4">
+        </video>
          <h1>Projects Link</h1>
          <a href="https://sushantsubedi-tech.github.io/Two-Good-Co-ui/" target="_blank">https://sushantsubedi-tech.github.io/Two-Good-Co-ui/</a>
         </div>
         <div id="card5" class="card">
-         <video src="/project vivo.mp4" loop muted autoplay ></video>
+        
+<video autoplay loop muted>
+  <source src="/project vivo.mp4" type="video/mp4">
+</video>
          <h1>Projects Link</h1>
          <a href="https://sushantsubedi-tech.github.io/Web-project/" target="_blank">https://sushantsubedi-tech.github.io/Web-project/</a>
         </div>
