--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="navbar">
       <div id="background"></div>
       <div id="left">
-        <img src="logo-removebg-preview.webp" alt="" height="70px" width="200px" />
+        <img src="/logo-removebg-preview.webp" alt="" height="70px" width="200px" />
       </div>
       <div id="MID">
         <a href="#">HOME</a>
@@ -38,7 +38,7 @@
         <p>🚀 Passionate Web Developer | 💻 Skilled in HTML, CSS, JavaScript & modern frameworks | 🎨 Crafting
           responsive & user-friendly web solutions | 📚 Always learning & innovating!</p>
         <div class="imagecontainer">
-          <img src="discord.webp" alt="">
+          <img src="/discord.webp" alt="">
         </div>
       </div>
     </div>
