--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="fakenav"></div>
     <div id="page1">
       <video autoplay loop muted height="100vh" width="100%">
-        <source src="/hero-cut-1.mp4" type="video/mp4">
+        <source src="/hero.cut-1.mp4" type="video/mp4">
     </video>
       <div id="content-container">
         <h1>I'm a <span>WEB-DEVELOPER</span></h1>
