image file format

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
          <a href="https://sushantsubedi-tech.github.io/Made-with-gsap/" target="_blank">https://sushantsubedi-tech.github.io/Made-with-gsap/</a>
         </div>
         <div id="card3" class="card">
-          <video autoplay loop>
+          <video autoplay loop muted>
             <source src="/project sid.mp4" type="video/mp4">
         </video>
          <h1>Projects Link</h1>
