--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="navbar">
       <div id="background"></div>
       <div id="left">
-        <img src="/logo-removebg-preview.webp" alt="" height="70px" width="200px" />
+        <img src="logo-removebg-preview.JPG" alt="" height="70px" width="200px" />
       </div>
       <div id="MID">
         <a href="#">HOME</a>
@@ -31,14 +31,14 @@
     <div id="fakenav"></div>
     <div id="page1">
       <video autoplay loop muted height="100vh" width="100%">
-        <source src="/hero.cut-1.mp4" type="video/mp4">
+        <source src="/hero-cut-1.mp4" type="video/mp4">
     </video>
       <div id="content-container">
         <h1>I'm a <span>WEB-DEVELOPER</span></h1>
         <p>🚀 Passionate Web Developer | 💻 Skilled in HTML, CSS, JavaScript & modern frameworks | 🎨 Crafting
           responsive & user-friendly web solutions | 📚 Always learning & innovating!</p>
         <div class="imagecontainer">
-          <img src="/discord.webp" alt="">
+          <img src="discord.JPG" alt="">
         </div>
       </div>
     </div>
@@ -52,7 +52,7 @@
       <div id="content-wrapper">
         <div id="card1" class="card">
           <video autoplay loop muted>
-            <source src="/project cy.mp4" type="video/mp4">
+            <source src="project-cy.mp4" type="video/mp4">
         </video>
          <h1>Projects Link</h1>
          <a href="https://sushantsubedi-tech.github.io/Cynthia-Ugwu-ui-/" target="_blank">https://sushantsubedi-tech.github.io/Cynthia-Ugwu-ui-/</a>
@@ -60,21 +60,21 @@
         </div>
         <div id="card2" class="card">
           <video autoplay loop muted>
-            <source src="/project made with gsap.mp4" type="video/mp4">
+            <source src="project-made-with-gsap.mp4" type="video/mp4">
         </video>
          <h1>Projects Link</h1>
          <a href="https://sushantsubedi-tech.github.io/Made-with-gsap/" target="_blank">https://sushantsubedi-tech.github.io/Made-with-gsap/</a>
         </div>
         <div id="card3" class="card">
           <video autoplay loop muted>
-            <source src="/project sid.mp4" type="video/mp4">
+            <source src="project-sid.mp4" type="video/mp4">
         </video>
          <h1>Projects Link</h1>
          <a href="https://sushantsubedi-tech.github.io/sid-ui-clone/" target="_blank">https://sushantsubedi-tech.github.io/sid-ui-clone/</a>
         </div>
         <div id="card4" class="card">
           <video autoplay loop muted>
-            <source src="/project twogood.mp4" type="video/mp4">
+            <source src="project-twogood.mp4" type="video/mp4">
         </video>
          <h1>Projects Link</h1>
          <a href="https://sushantsubedi-tech.github.io/Two-Good-Co-ui/" target="_blank">https://sushantsubedi-tech.github.io/Two-Good-Co-ui/</a>
