--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="navbar">
       <div id="background"></div>
       <div id="left">
-        <img src="logo-removebg-preview.JPG" alt="" height="70px" width="200px" />
+        <img src="logo-removebg-preview.jpg" alt="" height="70px" width="200px" />
       </div>
       <div id="MID">
         <a href="#">HOME</a>
@@ -31,7 +31,7 @@
     <div id="fakenav"></div>
     <div id="page1">
       <video autoplay loop muted height="100vh" width="100%">
-        <source src="/hero-cut-1.mp4" type="video/mp4">
+        <source src="hero-cut-1.mp4" type="video/mp4">
     </video>
       <div id="content-container">
         <h1>I'm a <span>WEB-DEVELOPER</span></h1>
@@ -82,7 +82,7 @@
         <div id="card5" class="card">
         
 <video autoplay loop muted>
-  <source src="/project vivo.mp4" type="video/mp4">
+  <source src="project vivo.mp4" type="video/mp4">
 </video>
          <h1>Projects Link</h1>
          <a href="https://sushantsubedi-tech.github.io/Web-project/" target="_blank">https://sushantsubedi-tech.github.io/Web-project/</a>
