lets see the changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.tailwindcss.com"></script>
   <title>LET'S BUILD OWN DESIGN</title>
 </head>
 
@@ -16,7 +17,7 @@
     <div id="navbar">
       <div id="background"></div>
       <div id="left">
-        <img src="logo-removebg-preview.jpg" alt="" height="70px" width="200px" />
+        <img src="images/logo-removebg-preview.jpg" alt="" height="70px" width="200px" />
       </div>
       <div id="MID">
         <a href="#">HOME</a>
@@ -31,75 +32,126 @@
     <div id="fakenav"></div>
     <div id="page1">
       <video autoplay loop muted height="100vh" width="100%">
-        <source src="hero-cut-1.mp4" type="video/mp4">
-    </video>
+        <source src="videos/hero-cut-1.mp4" type="video/mp4">
+      </video>
       <div id="content-container">
         <h1>I'm a <span>WEB-DEVELOPER</span></h1>
         <p>🚀 Passionate Web Developer | 💻 Skilled in HTML, CSS, JavaScript & modern frameworks | 🎨 Crafting
           responsive & user-friendly web solutions | 📚 Always learning & innovating!</p>
         <div class="imagecontainer">
-          <img src="discord.JPG" alt="">
+          <img src="images/discord.JPG" alt="">
         </div>
       </div>
     </div>
     <section>
       <h1>SOME PROJECTS</h1>
     </section>
-    <div id="page2">
-      <button id="prev">
-        <i class="fa-solid fa-arrow-left"></i>
-      </button>
-      <div id="content-wrapper">
-        <div id="card1" class="card">
-          <video autoplay loop muted>
-            <source src="project-cy.mp4" type="video/mp4">
+  <div id="page2">
+    <button id="prev">
+      <i class="fa-solid fa-arrow-left"></i>
+    </button>
+    <div id="content-wrapper">
+      <div id="card1" class="card">
+        <video autoplay loop muted>
+          <source src="videos/project-cy.mp4" type="video/mp4">
         </video>
-         <h1>Projects Link</h1>
-         <a href="https://sushantsubedi-tech.github.io/Cynthia-Ugwu-ui-/" target="_blank">https://sushantsubedi-tech.github.io/Cynthia-Ugwu-ui-/</a>
-         
-        </div>
-        <div id="card2" class="card">
-          <video autoplay loop muted>
-            <source src="project-made-with-gsap.mp4" type="video/mp4">
+        <h1>Projects Link</h1>
+        <a href="https://sushantsubedi-tech.github.io/Cynthia-Ugwu-ui-/"
+          target="_blank">https://sushantsubedi-tech.github.io/Cynthia-Ugwu-ui-/</a>
+
+      </div>
+      <div id="card2" class="card">
+        <video autoplay loop muted>
+          <source src="videos/project-made-with- gsap.mp4" type="video/mp4">
         </video>
-         <h1>Projects Link</h1>
-         <a href="https://sushantsubedi-tech.github.io/Made-with-gsap/" target="_blank">https://sushantsubedi-tech.github.io/Made-with-gsap/</a>
-        </div>
-        <div id="card3" class="card">
-          <video autoplay loop muted>
-            <source src="project-sid.mp4" type="video/mp4">
+        <h1>Projects Link</h1>
+        <a href="https://sushantsubedi-tech.github.io/Made-with-gsap/"
+          target="_blank">https://sushantsubedi-tech.github.io/Made-with-gsap/</a>
+      </div>
+      <div id="card3" class="card">
+        <video autoplay loop muted>
+          <source src="videos/project-sid.mp4" type="video/mp4">
         </video>
-         <h1>Projects Link</h1>
-         <a href="https://sushantsubedi-tech.github.io/sid-ui-clone/" target="_blank">https://sushantsubedi-tech.github.io/sid-ui-clone/</a>
-        </div>
-        <div id="card4" class="card">
-          <video autoplay loop muted>
-            <source src="project-twogood.mp4" type="video/mp4">
+        <h1>Projects Link</h1>
+        <a href="https://sushantsubedi-tech.github.io/sid-ui-clone/"
+          target="_blank">https://sushantsubedi-tech.github.io/sid-ui-clone/</a>
+      </div>
+      <div id="card4" class="card">
+        <video autoplay loop muted>
+          <source src="videos/project-twogood.mp4" type="video/mp4">
         </video>
-         <h1>Projects Link</h1>
-         <a href="https://sushantsubedi-tech.github.io/Two-Good-Co-ui/" target="_blank">https://sushantsubedi-tech.github.io/Two-Good-Co-ui/</a>
+        <h1>Projects Link</h1>
+        <a href="https://sushantsubedi-tech.github.io/Two-Good-Co-ui/"
+          target="_blank">https://sushantsubedi-tech.github.io/Two-Good-Co-ui/</a>
+      </div>
+      <div id="card5" class="card">
+
+        <video autoplay loop muted>
+          <source src="videos/project-vivo.mp4" type="video/mp4">
+        </video>
+        <h1>Projects Link</h1>
+        <a href="https://sushantsubedi-tech.github.io/Web-project/"
+          target="_blank">https://sushantsubedi-tech.github.io/Web-project/</a>
+      </div>
+    </div>
+    <button id="next">
+      <i class="fa-solid fa-arrow-right"></i>
+    </button>
+  </div>
+    <section id="infinitescroller">
+      <div class="marque">
+        <h1>WEB-DEVELOPER</h1>
+
+        <h1>WEB-DESIGNER</h1>
+
+        <h1>FRONT-END-DEVELOPER</h1>
+
+        <h1>WEB-DEVELOPER</h1>
+
+        <h1>WEB-DESIGNER</h1>
+
+        <h1>FRONT-END-DEVELOPER</h1>
+        <h1>WEB-DEVELOPER</h1>
+
+        <h1>WEB-DESIGNER</h1>
+
+        <h1>FRONT-END-DEVELOPER</h1>
+        <h1>WEB-DEVELOPER</h1>
+
+        <h1>WEB-DESIGNER</h1>
+
+        <h1>FRONT-END-DEVELOPER</h1>
+      </div>
+
+    </section>
+    <div id="page3" class="flex h-[100vh] w-[100%] justify-center items-center bg-gray-900">
+      <div id="socialprofile" class=" h-[100%] w-[100%] grid grid-cols-[1fr,1fr] grid-rows-[1fr,1fr] place-items-center">
+        <div id="links" class="h-[10rem] w-[20rem] flex flex-col items-center border-2 border-black rounded-[25px] bg-red-900">
+          <h1 class="text-2xl font-bold text-white uppercase">Facebook</h1>
+          <a href="https://www.facebook.com/sushantttttttt" target="_blank"><i class="ri-facebook-circle-fill"></i></a>
         </div>
-        <div id="card5" class="card">
-        
-<video autoplay loop muted>
-  <source src="project vivo.mp4" type="video/mp4">
-</video>
-         <h1>Projects Link</h1>
-         <a href="https://sushantsubedi-tech.github.io/Web-project/" target="_blank">https://sushantsubedi-tech.github.io/Web-project/</a>
+        <div id="links" class="h-[10rem] w-[20rem] flex flex-col items-center border-2 border-black rounded-[25px] bg-red-900">
+          <h1 class="text-2xl font-bold text-white uppercase">Instagram</h1>
+          <a href="https://www.instagram.com/ig_sushantttt/" target="_blank"><i class="ri-instagram-fill"></i></a>
+        </div>
+        <div id="links" class="h-[10rem] w-[20rem] flex flex-col items-center border-2 border-black rounded-[25px] bg-red-900">
+          <h1 class="text-2xl font-bold text-white uppercase" target="_blank">LINKEDIN</h1>
+          <a href="https://www.linkedin.com/in/sushant-subedi-516505341/"><i class="ri-linkedin-box-fill"></i></a>
+        </div>
+        <div id="links" class="h-[10rem] w-[20rem] flex flex-col items-center border-2 border-black rounded-[25px] bg-red-900">
+          <h1 class="text-2xl font-bold text-white uppercase">GITHUB</h1>
+          <a href="https://github.com/Sushantsubedi-tech" target="_blank"><i class="ri-github-fill"></i></a>
         </div>
       </div>
-      <button id="next">
-        <i class="fa-solid fa-arrow-right"></i>
-      </button>
     </div>
   </div>
 </body>
 <script src="https://unpkg.com/lenis@1.1.22/dist/lenis.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
-  integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
   integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+  integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
   crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="script.js"></script>
 
